# TransArch

./: .gitignore  README.md
GQLA_preprint/: .gitignore  README.md  pyproject.toml
GQLA_preprint/scripts/: run_ablation_2x2.sh  run_commonsense.sh  run_commonsense_2x2.sh  summarize_commonsense_2x2.py  summarize_lm_eval.py
GQLA_preprint/src/: __init__.py  compression.py  convert.py  modeling.py  vllm_model.py  vllm_register.py
HISA_COLM_2026/: README.md
HISA_preprint/: README.md
MISA_preprint/: README.md
MISA_preprint/misa_vllm_patch_1stage/: pyproject.toml
MISA_preprint/misa_vllm_patch_1stage/misa_vllm_patch/: __init__.py  autotune.py  indexers.py  misa_deepseek_v2.py  misa_ops.py  test_speed.py  test_speed_stage2.py  tilelang_utils.py
MISA_preprint/misa_vllm_patch_2stage/: pyproject.toml
MISA_preprint/misa_vllm_patch_2stage/misa_vllm_patch/: block_ops.py  indexers.py  misa_deepseek_v2.py  misa_ops.py  register.py  test_speed.py
OpenDSA/: .gitignore  README.md  requirements.txt
OpenDSA/configs/: accelerate_ddp.yaml  accelerate_fsdp.yaml
OpenDSA/opendsa/: __init__.py
OpenDSA/opendsa/data/: __init__.py  collator.py  long_pack.py
OpenDSA/opendsa/eval/: __init__.py  longbench_hf.py  niah_hf.py
OpenDSA/opendsa/modeling/: __init__.py  dsa_attention.py  ep_moe.py  indexer.py  patch_deepseek.py
OpenDSA/opendsa/ops/: __init__.py  flashkl_warmup.py  (+2 more)
OpenDSA/scripts/: run_sparse.sh  run_warmup.sh
OpenDSA/tests/: _path.py  test_cp_equiv.py  test_ep_equiv.py  test_patch_integration.py  test_pg.py  test_sparse_cp_ep_equiv.py  test_zero2_equiv.py
(+7 files in other folders)
